more design changes made

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                 </div>
                 <hr>
                 <h2><span>Mission Statement</span></h2>
-                <p class="lead animate__animated animate__fadeInLeft">Fonseca Fitness is an all-encompassing
+                <p class="animate__animated animate__fadeInLeft">Fonseca Fitness is an all-encompassing
                     environment
                     for women. We want women
                     to have the confidence to train throughout life, taking into consideration the role hormones
@@ -154,19 +154,19 @@
                     fitness
                     and
                     wellbeing. </p>
-                <p class="lead animate__animated animate__fadeInRight"> Our memberships aim is to give the women of
+                <p class="animate__animated animate__fadeInRight"> Our memberships aim is to give the women of
                     Fonseca
                     Fitness
                     the opportunity to progress
                     with guidance,
                     education and training in a supportive community to work towards their individual goals. </p>
-                <p class="lead animate__animated animate__fadeInLeft">Fonseca Fitness is about creating an exclusive
+                <p class="animate__animated animate__fadeInLeft">Fonseca Fitness is about creating an exclusive
                     community that women desire to be a part
                     of.
                     Why? Because
                     there is nothing else
                     like it.</p>
-                <p class="lead animate__animated animate__fadeInRight">The environment will provide an exclusive
+                <p class="animate__animated animate__fadeInRight">The environment will provide an exclusive
                     membership, with unlimited access to a variety
                     of
                     classes, 1-1 personaltraining, nutritional support, along with discount on supplements and
@@ -369,7 +369,7 @@
         </footer>
 
 
-        <script src="index.js"></script>
+        <!-- <script src="index.js"></script> -->
         <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
