--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               for
               you, the women of Fonseca Fitness.
             </p>
-            <p><a class="btn" href="./download.html">Download & Join</a></p>
+            <!-- <p><a class="btn" href="./download.html">Download & Join</a></p> -->
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/JnnY4YA.png"
@@ -258,14 +258,12 @@
 
 
           </p>
-          <a href="./download.html"><button class="btn session">Download and Join</button></a>
         </div>
       </div>
       <hr class="featurette-divider">
-
       <div class="text-center">
-        <p><span>Opening times:
-            Monday-Friday: 6am-8pm
+        <p><span>Opening times: <br>
+            Monday-Friday: 6am-8pm <br>
             Saturday & Sunday: 8am-12pm</span></p>
       </div>
 
