--- a/pricing.html
+++ b/pricing.html
@@ -103,7 +103,21 @@
                             classes, 15 minute studio induction, access to our
                             community members group and exclusive discounts
                             on our merchandise.</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
+
+                    <div class="card-body animate__animated animate__fadeInDown">
+                        <h3 class="card-title"> <span>Mum and Baby - £45pm</span></h3>
+                        <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
+                            and baby classes per week at 9.30am, 15 minute studio
+                            induction, access to our community members group and
+                            exclusive discounts on our merchandise.</p>
+
 
                     </div>
                 </div>
@@ -112,24 +126,10 @@
                 <div class="card h-100" id="membership">
 
                     <div class="card-body animate__animated animate__fadeInRight">
-                        <h3 class="card-title"> <span>Mum and Baby - £45pm</span></h3>
-                        <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
-                            and baby classes per week at 9.30am, 15 minute studio
-                            induction, access to our community members group and
-                            exclusive discounts on our merchandise.</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100" id="membership">
-
-                    <div class="card-body animate__animated animate__fadeInLeft">
                         <h3 class="card-title"> <span>Drop In - £12.50</span> </h3>
                         <p class="card-text">Access to one Fonseca Fitness class.
                             (Expires within 24 hours).</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
 
                     </div>
                 </div>
@@ -144,20 +144,20 @@
                             15 minute studio induction, access to our community
                             members group and exclusive discounts on our
                             merchandise.</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100" id="membership">
-                    <div class="card-body animate__animated animate__fadeIn">
+                    <div class="card-body animate__animated animate__fadeInDown">
                         <h3 class="card-title"> <span>Masters 60+ - £45pm</span></h3>
                         <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
                             and baby classes per week at 9.30am, 15 minute studio
                             induction, access to our community members group and
                             exclusive discounts on our merchandise.</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
 
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                             and baby classes per week at 9.30am, 15 minute studio
                             induction, access to our community members group and
                             exclusive discounts on our merchandise.</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
 
                     </div>
                 </div>
@@ -185,25 +185,25 @@
                             studio dependent on your goal, we will tailor you to
                             the right coach to fit your needs.
                             Please e-mail us for availability.</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100" id="membership">
-                    <div class="card-body animate__animated animate__fadeIn">
+                    <div class="card-body animate__animated animate__fadeInUp">
                         <h3 class="card-title"><span> Under 16's - £20pm</span></h3>
                         <p class="card-text">Membership for under 16's that has a relative as a member.
                             Access to two 45 minute classes per week.</p> <br>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
-                    <div class="card-footer animate__animated animate__fadeIn">
+                    <div class="card-footer animate__animated animate__fadeInUp">
                         <h3 class="card-title"><span> Under 16's - £40pm</span></h3>
 
                         <div class="card-text">Membership for under 16's that does not have a relative as
                             a member. Access to two 45 minute classes per week.</div><br>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
@@ -216,25 +216,24 @@
                             tailored programme to follow, however there will be
                             1 coach, to 3 clients in a 55 minute session.
                             Please e-mail us for availability.</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100" id="membership">
-                    <div class="card-body animate__animated animate__fadeIn">
+                    <div class="card-body animate__animated animate__fadeInLeft">
                         <h3 class="card-title"> <span>12 Month Membership - £49pm</span></h3>
                         <p class="card-text">Gym only membership, all gym access is bookable via the app</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
+
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100" id="membership">
-                    <div class="card-body animate__animated animate__fadeIn">
+                    <div class="card-body animate__animated animate__fadeInUp">
                         <h3 class="card-title"> <span>6 Month Membership - £57pm</span></h3>
                         <p class="card-text">Gym only membership, all gym access is bookable via the app</p>
-                        <p><a class="btn" href="./download.html">Download & Join</a></p>
                     </div>
                 </div>
             </div>
@@ -255,8 +254,8 @@
         <hr class="featurette-divider">
 
         <div class="text-center">
-            <p><span>Opening times:
-                    Monday-Friday: 6am-8pm
+            <p><span>Opening times: <br>
+                    Monday-Friday: 6am-8pm <br>
                     Saturday & Sunday: 8am-12pm</span></p>
         </div>
 
@@ -290,7 +289,7 @@
         </footer>
     </main>
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
     <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
