--- a/timetable.html
+++ b/timetable.html
@@ -151,7 +151,7 @@
 
             </p>
             <p>
-            <h2>Friday night party night</h2>Our bespoke party night will see you have the
+            <h2>Friday Night Party Night</h2>Our bespoke party night will see you have the
             best workout party experience. Bring your friend to a different kind of
             bar for bright lights, great music and that post workout adrenaline
             rush!
@@ -316,8 +316,8 @@
                 <hr class="featurette-divider">
 
                 <div class="text-center">
-                    <p><span>Opening times:
-                            Monday-Friday: 6am-8pm
+                    <p><span>Opening times: <br>
+                            Monday-Friday: 6am-8pm <br>
                             Saturday & Sunday: 8am-12pm</span></p>
                 </div>
                 <hr class="featurette-divider">
@@ -352,7 +352,7 @@
                 </footer>
                 </main>
 
-                <script src="index.js"></script>
+                <!-- <script src="index.js"></script> -->
                 <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
                     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
