--- a/contact.html
+++ b/contact.html
@@ -91,12 +91,12 @@
 
         <div class="container-fluid">
             <div class="card-group">
-                <div class="card animate__animated animate__fadeInDown">
+                <!-- <div class="card animate__animated animate__fadeInDown">
                     <img src="https://i.imgur.com/DoSGpcV.png" class="card-img" id="contactimg" alt="...">
-                </div>
-                <div>
+                </div> -->
+                <div class="mx-auto">
                     <h2 class="qtitle animate__animated animate__fadeInDown">Contact us</h2>
-                    <form class="animate__animated animate__fadeInDown">
+                    <form class="animate__animated animate__fadeInDown text-center">
 
                         <input name="name" type="text" class="feedback-input" placeholder="Name" />
 
@@ -113,9 +113,9 @@
 
                     </form>
                 </div>
-                <div class="card animate__animated animate__fadeInDown">
+                <!-- <div class="card animate__animated animate__fadeInDown">
                     <img src="https://i.imgur.com/ZBmnHRW.jpg" class="card-img" id="gymimg" alt="...">
-                </div>
+                </div> -->
 
             </div>
             <hr class="featurette-divider">
