--- a/download.html
+++ b/download.html
@@ -131,8 +131,8 @@
     <hr class="featurette-divider">
 
     <div class="text-center">
-        <p><span>Opening times:
-                Monday-Friday: 6am-8pm
+        <p><span>Opening times: <br>
+                Monday-Friday: 6am-8pm <br>
                 Saturday & Sunday: 8am-12pm</span></p>
     </div>
 
@@ -151,9 +151,9 @@
             <div class="card animate__animated animate__fadeInDown">
                 <img src="https://i.imgur.com/DGcdVPu.jpg" class="card-img" alt="">
             </div>
-            <div class="card animate__animated animate__fadeInDown">
+            <!-- <div class="card animate__animated animate__fadeInDown">
                 <img src="https://i.imgur.com/nkdZagR.jpg" class="card-img" alt="...">
-            </div>
+            </div> -->
             <div class="card animate__animated animate__fadeInDown">
                 <img src="https://i.imgur.com/gDu016E.jpg" class="card-img" alt="...">
             </div>
@@ -192,7 +192,7 @@
         </footer>
         </main>
 
-        <script src="index.js"></script>
+        <!-- <script src="index.js"></script> -->
         <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
